[project]
name = "langgraph-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "grandalf>=0.8",
    "ipython>=9.2.0",
    "jupyter>=1.1.1",
    "langchain>=0.3.25",
    "langchain-openai>=0.3.17",
    "langchain-tavily>=0.1.6",
    "langgraph>=0.4.5",
    "langsmith>=0.3.42",
]
