[project]
name = "langgraph-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "chromadb>=1.0.12",
    "dotenv>=0.9.9",
    "grandalf>=0.8",
    "ipython>=9.2.0",
    "jupyter>=1.1.1",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.25",
    "langchain-openai>=0.3.17",
    "langchain-tavily>=0.1.6",
    "langchainhub>=0.1.21",
    "langgraph>=0.4.5",
    "langsmith>=0.3.42",
    "pytest>=8.4.0",
]
